Implemented Bot Scheduling, reporting, user access control

--- a/src/automation_platform/templates/bot-control-bots.html
+++ b/src/automation_platform/templates/bot-control-bots.html
@@ -38,6 +38,6 @@
     {% endfor %}
 
 </div>
-<script src="{{ url_for('static', filename='js/script.js') }}"></script>
+<script src="{{ url_for('static', filename='js/bot_control_bots.js') }}"></script>
 
 {% endblock %}
