--- a/src/automation_platform/templates/bot-details.html
+++ b/src/automation_platform/templates/bot-details.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <div class="mx-auto bg-white shadow-xl border border-gray-200 rounded-2xl p-6">
-    <a href="{{ url_for('api.launchpad_api.launchpad') }}" class="text-blue-600 flex items-center gap-1 mb-6">
+    <a href="{{ url_for('api.launchpad_bp.launchpad') }}" class="text-blue-600 flex items-center gap-1 mb-6">
         &larr; Back to Launchpad
     </a>
 
