--- a/src/automation_platform/templates/bot-details.html
+++ b/src/automation_platform/templates/bot-details.html
@@ -30,6 +30,13 @@
         </div>
     </div>
 
+    <div class="mt-6 border-b pb-4">
+        <div>
+            <p class="text-lg font-bold text-black-500">Description</p>
+            <p id="detailCategory" class="text-sm text-gray-800">{{ bot_description }}</p>
+        </div>
+    </div>
+
     <!-- Scheduling Tabs and Content -->
     <div class="mt-6">
         <p class="text-lg font-semibold text-gray-700 mb-4">Schedule Bot Execution</p>
